# XP

./: CMakeLists.txt  README.md  main.cpp
hsvhist/: color_descriptor.py  extract_features_and_Indexing.py  perceptual_algorithm.py  search.py  similarity_search.py
